--- a/listener/package.json
+++ b/listener/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "notify-send": "~0.1.2"
+    "notify-send": "~0.1.2",
+    "sockjs-client": "^0.1.3",
+    "shoe": "0.0.15",
+    "event-stream": "^3.1.1",
+    "sockjs-stream": "^1.0.2"
   },
   "devDependencies": {},
   "scripts": {
