--- a/cloudapi/package.json
+++ b/cloudapi/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "sockjs": "~0.3.8",
     "shoe": "0.0.15",
-    "browserify": "~3.38.0"
+    "browserify": "~3.38.0",
+    "through": "~2.3.4"
   }
 }
