Adding request as a dependency.

--- a/sniffer/package.json
+++ b/sniffer/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "noble": "^0.3.0",
-    "event-stream": "^3.1.1"
+    "event-stream": "^3.1.1",
+    "request": "~2.34.0"
   }
 }
