--- a/cloudapi/package.json
+++ b/cloudapi/package.json
@@ -15,6 +15,7 @@
     "sockjs": "~0.3.8",
     "shoe": "0.0.15",
     "browserify": "~3.38.0",
-    "through": "~2.3.4"
+    "through": "~2.3.4",
+    "express": "~3.5.1"
   }
 }
